force-app/main/default/objects/ShGl_DisableBusinessLogic__c/ShGl_DisableBusinessLogic__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Disable Business Logic in Salesforce - Includes Triggers, Workflows, Process Builders and Validation Rules</description>
    <label>DisableBusinessLogic</label>
</CustomObject>