force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Approval_Issue_Notify_flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Issue_Notify_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approval  Issue Notify flag</description>
    <inlineHelpText>Approval Issue Notify flag used in QuoteExtController</inlineHelpText>
    <label>Approval Issue Notify flag</label>
    <type>Checkbox</type>
</CustomField>