force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/assetUpdateviaEntitlement__c.field-meta.xml
<CustomField>
    <fullName>assetUpdateviaEntitlement__c</fullName>
    <description>Deprecated as part of PRDOPS23-131</description>
    <label>(deprecated) assetUpdateviaEntitlement</label>
    <type>TextArea</type>
</CustomField>