force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Account Email Alerts</description>
    <inlineHelpText>Disable Account Email Alerts</inlineHelpText>
    <label>Disable Account Email Alerts</label>
    <type>Checkbox</type>
</CustomField>