force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used as switch to disable flow for Account Object</description>
    <label>Disable Account Flows</label>
    <type>Checkbox</type>
</CustomField>