force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Risk_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Risk_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to disable the Account based risk profile creation for both ML and CX sync</description>
    <inlineHelpText>checkbox to disable the Account based risk profile creation for both ML and CX sync</inlineHelpText>
    <label>Disable Account Risk Triggers</label>
    <type>Checkbox</type>
</CustomField>