force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Screening_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Screening_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will disable the trigger execution of Account Screening Object</description>
    <label>Disable Account Screening Trigger</label>
    <type>Checkbox</type>
</CustomField>