force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Account Triggers</description>
    <inlineHelpText>Disable Account Triggers</inlineHelpText>
    <label>Disable Account Triggers</label>
    <type>Checkbox</type>
</CustomField>