force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Account_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to disable validation on account - CPQ22-4460</description>
    <label>Disable Account Validation Rules</label>
    <type>Checkbox</type>
</CustomField>