force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Approval_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Approval_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to disable all the flows created as part of SPH-55</description>
    <label>Disable Approval Flows</label>
    <type>Checkbox</type>
</CustomField>