force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Approver_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Approver_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This switch is used to disable flows for approver object</description>
    <label>Disable Approver Flows</label>
    <type>Checkbox</type>
</CustomField>