force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Assist_Request_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Assist_Request_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Assist Request Flows</label>
    <type>Checkbox</type>
</CustomField>