force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Batch_Apex__c.field-meta.xml
<CustomField>
    <fullName>Disable_Batch_Apex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Batch Apex</label>
    <type>Checkbox</type>
</CustomField>