force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Campaign_Member_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Campaign_Member_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Campaign Member Triggers</label>
    <type>Checkbox</type>
</CustomField>