force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Case_Comment_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Comment_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Case Comment Trigger</label>
    <type>Checkbox</type>
</CustomField>