force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Case_Comment_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Comment_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Case Comment Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>