force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Case_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all the Case Triggers will be bypassed</description>
    <inlineHelpText>If true, all the Case Triggers will be bypassed</inlineHelpText>
    <label>Disable Case Triggers</label>
    <type>Checkbox</type>
</CustomField>