force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Case_Workflow_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Workflow_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, all the Case workflow rules will be bypassed</description>
    <inlineHelpText>If true, all the Case workflow rules will be bypassed</inlineHelpText>
    <label>Disable Case Workflow Rules</label>
    <type>Checkbox</type>
</CustomField>