force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CCR_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_CCR_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as a flag to switch on or off flows on CCR Object created as a part of SPH-134</description>
    <label>Disable CCR Flows</label>
    <type>Checkbox</type>
</CustomField>