force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CCR_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_CCR_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable CCR custom trigger</description>
    <label>Disable CCR Triggers</label>
    <type>Checkbox</type>
</CustomField>