force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CCR_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_CCR_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable CCR Validation Rules</label>
    <type>Checkbox</type>
</CustomField>