force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Cluster_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Cluster_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be used to activate or deactivate flows on Cluster Object</description>
    <label>Disable Cluster Flows</label>
    <type>Checkbox</type>
</CustomField>