force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Community_Feed_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Community_Feed_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag is control activation and deactivation of Community Feed Flows</description>
    <label>Disable Community Feed Flows</label>
    <type>Checkbox</type>
</CustomField>