force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Consent_Proof_VR_in_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Disable_Consent_Proof_VR_in_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable the Mandate_Consent_Proof_for_Tradeshow_3rdP Validation Rule in Campaign when the User Profile is System Administrator or Rubrik Marketing Ops User.</description>
    <label>Disable Consent Proof VR in Campaign</label>
    <type>Checkbox</type>
</CustomField>