force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Contact_Process_Builders__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Process_Builders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will disable the Contact Process Builders</description>
    <label>Disable Contact Process Builders</label>
    <type>Checkbox</type>
</CustomField>