force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Contact_Role_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Role_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SAL26-371. This will be used to bypass contact role trigger execution when checked as true.</description>
    <label>Disable Contact Role Triggers</label>
    <type>Checkbox</type>
</CustomField>