force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Contact_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Contact Triggers</label>
    <type>Checkbox</type>
</CustomField>