force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Contract_Line_Item_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contract_Line_Item_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Contract Line Item Triggers</description>
    <inlineHelpText>Disable Contract Line Item Triggers</inlineHelpText>
    <label>Disable Contract Line Item Triggers</label>
    <type>Checkbox</type>
</CustomField>