force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_ConvertQLtoCPQDisposeLines__c.field-meta.xml
<CustomField>
    <fullName>Disable_ConvertQLtoCPQDisposeLines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to disable logic for Convert QL lines to CPQDisposeLines.</description>
    <label>Disable_ConvertQLtoCPQDisposeLines</label>
    <type>Checkbox</type>
</CustomField>