force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CRSD_GracePeriod_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Disable_CRSD_GracePeriod_Validation_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FY25SR-187 Toggle field to enable/disable CRSD Grace Period Validation check</description>
    <label>Disable CRSD GracePeriod Validation Rule</label>
    <type>Checkbox</type>
</CustomField>