force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CSH_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_CSH_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to disable Case special handling(CSH) validation rules.</description>
    <label>Disable CSH Validation Rules</label>
    <type>Checkbox</type>
</CustomField>