force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Customer_Subscription_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Customer_Subscription_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag is used to control flow activation and deactivation</description>
    <label>Disable Customer Subscription Flows</label>
    <type>Checkbox</type>
</CustomField>