force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CVE_Enagement_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_CVE_Enagement_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL26-564: created as part of this ticket requirements.</description>
    <label>Disable CVE Enagement Validation Rules</label>
    <type>Checkbox</type>
</CustomField>