force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_CVE_Engagement_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CVE_Engagement_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAL26-640: created as part of CXO requirement</description>
    <label>Disable CVE Engagement Trigger</label>
    <type>Checkbox</type>
</CustomField>