force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Deal_Desk_Case_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Deal_Desk_Case_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[SAL26-481] - Disable Deal Desk case Validation rules</description>
    <inlineHelpText>Disable Deal Desk case Validation rules</inlineHelpText>
    <label>Disable Deal Desk Case Validation Rules</label>
    <type>Checkbox</type>
</CustomField>