force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Deal_Registration_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Deal_Registration_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Deal Registration Triggers</description>
    <inlineHelpText>Disable Deal Registration Triggers</inlineHelpText>
    <label>Disable Deal Registration Trigger</label>
    <type>Checkbox</type>
</CustomField>