force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to disable Email alerts as a switch to be used in flows to disable email alerts as part of SPH-55</description>
    <label>Disable Email Alerts</label>
    <type>Checkbox</type>
</CustomField>