force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Email_Notification_for_Top_Acn__c.field-meta.xml
<CustomField>
    <fullName>Disable_Email_Notification_for_Top_Acn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Email Notification for Top Acn</label>
    <type>Checkbox</type>
</CustomField>