force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_EmailMessage_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_EmailMessage_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable Email Message flows.</description>
    <label>Disable EmailMessage Flows</label>
    <type>Checkbox</type>
</CustomField>