force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Entitlement_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Entitlement_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can be used to disable the Entitlement Validations</description>
    <label>Disable Entitlement Validation Rules</label>
    <type>Checkbox</type>
</CustomField>