force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_ETMStageMonitoring_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_ETMStageMonitoring_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable_ETMStageMonitoring_Triggers</label>
    <type>Checkbox</type>
</CustomField>