force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Event_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This switch is used to disable flows on event object created as part of SPH-119</description>
    <label>Disable Event Flows</label>
    <type>Checkbox</type>
</CustomField>