force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Event_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Event_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MKt24-1108 - Functionality to disable Event Validation Rules</description>
    <label>Disable Event Validation Rules</label>
    <type>Checkbox</type>
</CustomField>