force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Failure_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Failure_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field is created To disable Failure Main Trigger</description>
    <label>Disable Failure Triggers</label>
    <type>Checkbox</type>
</CustomField>