force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Field_Editability_Control_Fun__c.field-meta.xml
<CustomField>
    <fullName>Disable_Field_Editability_Control_Fun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Field Editability Control Fun</label>
    <type>Checkbox</type>
</CustomField>