force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is switch created to disable flows to be used in entry criteria created as part of SPH-57</description>
    <label>Disable Flows</label>
    <type>Checkbox</type>
</CustomField>