force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_GetFeedbackSurveyResponse_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_GetFeedbackSurveyResponse_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Flag is to check flows activation on object GetFeedback Survey Response</description>
    <inlineHelpText>This Flag is to check flows activation on object GetFeedback Survey Response</inlineHelpText>
    <label>Disable GetFeedbackSurveyResponse Flows</label>
    <type>Checkbox</type>
</CustomField>