force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Heat_Map_Entry_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Heat_Map_Entry_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Heat Map Entry Triggers</label>
    <type>Checkbox</type>
</CustomField>