force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Idea_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Idea_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To disable all the Idea object&apos;s flows</description>
    <label>Disable Idea Flows</label>
    <type>Checkbox</type>
</CustomField>