force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Integration_Error_Log_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Integration_Error_Log_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Integration Error Log Trigger</label>
    <type>Checkbox</type>
</CustomField>