force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Lead_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Lead Triggers</label>
    <type>Checkbox</type>
</CustomField>