force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Lead_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Lead Validation Rules</description>
    <inlineHelpText>Disable Lead Validation Rules</inlineHelpText>
    <label>Disable Lead Validation Rules</label>
    <type>Checkbox</type>
</CustomField>