force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Node_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Node_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is created to disable flows on node object created as part of SPH-435</description>
    <label>Disable Node Flows</label>
    <type>Checkbox</type>
</CustomField>