force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Operation_Request_VRs__c.field-meta.xml
<CustomField>
    <fullName>Disable_Operation_Request_VRs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For operation request validation rule</description>
    <label>Disable Operation Request VRs</label>
    <type>Checkbox</type>
</CustomField>