force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Opportunity Email Alerts</description>
    <inlineHelpText>Disable Opportunity Email Alerts</inlineHelpText>
    <label>Disable Opportunity Email Alerts</label>
    <type>Checkbox</type>
</CustomField>