force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created as a switch to disable flows at Opportunity Level created as part of SPH-116</description>
    <label>Disable Opportunity Flows</label>
    <type>Checkbox</type>
</CustomField>