force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Old_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Old_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity Old Trigger</label>
    <type>Checkbox</type>
</CustomField>