force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Solution_Validation__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Solution_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity Solution Validation</label>
    <type>Checkbox</type>
</CustomField>