force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Opportunity Trigger</description>
    <inlineHelpText>Disable Opportunity Trigger</inlineHelpText>
    <label>Disable Opportunity Triggers</label>
    <type>Checkbox</type>
</CustomField>