force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Opportunity_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Opportunity Validation Rules</description>
    <inlineHelpText>Disable Opportunity Validation Rules</inlineHelpText>
    <label>Disable Opportunity Validation Rules</label>
    <type>Checkbox</type>
</CustomField>