force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Order_Email_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Email_Alerts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Order Email Alerts</label>
    <type>Checkbox</type>
</CustomField>