force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Order_Product_Flows__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Product_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Order Product Flows</label>
    <type>Checkbox</type>
</CustomField>