force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Order_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Order Triggers</description>
    <inlineHelpText>Disable Order Triggers</inlineHelpText>
    <label>Disable Order Triggers</label>
    <type>Checkbox</type>
</CustomField>