force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Order_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Disable_Order_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Order Validation Rules</description>
    <inlineHelpText>Disable Order Validation Rules</inlineHelpText>
    <label>Disable Order Validation Rules</label>
    <type>Checkbox</type>
</CustomField>