force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_OrderItemExtension_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_OrderItemExtension_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable OrderItemExtension Trigger</label>
    <type>Checkbox</type>
</CustomField>