force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Partner_Fund_Request_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Fund_Request_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Partner Fund Request Triggers</label>
    <type>Checkbox</type>
</CustomField>