force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Partner_Onboarding_Req_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Onboarding_Req_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Partner Onboarding Req Triggers</description>
    <inlineHelpText>Disable Partner Onboarding Req Triggers</inlineHelpText>
    <label>Disable Partner Onboarding Req Triggers</label>
    <type>Checkbox</type>
</CustomField>