force-app/main/default/objects/ShGl_DisableBusinessLogic__c/fields/Disable_Partner_Relation_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Partner_Relation_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Partner Relation Triggers</description>
    <inlineHelpText>Disable Partner Relation Triggers</inlineHelpText>
    <label>Disable Partner Relation Triggers</label>
    <type>Checkbox</type>
</CustomField>